Add specific versions to Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:latest AS builder
+FROM golang:1.12.9 AS builder
 LABEL maintainer="keylo99 <keylo99official@gmail.com>"
 ENV LC_ALL=C.UTF-8
 WORKDIR /app/
@@ -6,7 +6,7 @@ COPY src .
 RUN go get -d ./...
 RUN go build -o pkgtop .
 
-FROM alpine:latest
+FROM alpine:3.10.2
 WORKDIR /root/
 COPY --from=builder /app/pkgtop .
 CMD ["./pkgtop"]
